syntax = "proto3";

package calculator;
option go_package = "calculatorpb/";

message CalculatorRequest {
  double number1 = 1;
  double number2 = 2;
}

message CalculatorResponse { double result = 1; }

message GetPrimeRequest { int32 number = 1; }

message GetPrimeResponse { int32 result = 1; }

message GetAverageRequest { int32 number = 1; }

message GetAverageResponse { double response = 2; }

message SquareRootRequest { int32 number = 1; }

message SquareRootResponse { double number_root = 1; }

service CalculatorService {
  rpc Calculator(CalculatorRequest) returns (CalculatorResponse) {}

  rpc GetPrime(GetPrimeRequest) returns (stream GetPrimeResponse) {}

  rpc GetAverage(stream GetAverageRequest) returns (GetAverageResponse) {}

  ///Error Handling
  ///This RPC will throw an exception if the sent number is negetive
  ///The error being send is of type INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {}
}
